# RoboCar

./: .gitmodules  README.md
Android/MyApplication4/app/: build.gradle
Android/MyApplication4/app/src/androidTest/java/com/andrey/myapplication/: ExampleInstrumentedTest.java
Android/MyApplication4/app/src/main/: AndroidManifest.xml
Android/MyApplication4/app/src/main/java/com/andrey/myapplication/: Constants.java  ControlPane.java  DevicesFragment.java  Joystick.java  LogItem.java  (+13 more)
Android/MyApplication4/app/src/main/res/drawable/: log_mark.xml  log_mark_error.xml  log_mark_incoming.xml  log_mark_incoming_error.xml
Android/MyApplication4/app/src/main/res/layout/: activity_control.xml  activity_main.xml  control_pane.xml  log_item.xml
Android/MyApplication4/app/src/main/res/layout-land/: activity_main.xml  control_pane.xml
Android/MyApplication4/app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
Android/MyApplication4/gradle/wrapper/: gradle-wrapper.properties
Arduino Controller/base/: .clang_complete  platformio.ini
Arduino Controller/base/src/: main.cpp
Arduino Controller/base/src/modules/CarModel/: CarModel.cpp  CarModel.h
Arduino Controller/base/src/modules/Manager/: Manager.cpp  Manager.h
Arduino Controller/base/src/modules/pins/: pins.h
Arduino Controller/modules/ByteArray/: ByteArray.h
Arduino Controller/modules/Logger/: Logger.h
Arduino Controller/modules/RadioExtended/: RadioExtended.cpp  RadioExtended.h
Arduino Controller/modules/RadioMessage/: RadioMessage.cpp  RadioMessage.h
Arduino Controller/modules/config/: config.h
Arduino Controller/slave/: platformio.ini
Arduino Controller/slave/src/: main.cpp
Arduino Controller/slave/src/modules/CarModel/: CarModel.cpp  CarModel.h
Arduino Controller/slave/src/modules/Chassis/: Chassis.cpp  Chassis.h
Arduino Controller/slave/src/modules/Manager/: Manager.cpp  Manager.h
Arduino Controller/slave/src/modules/pins/: pins.h
hardware/: CMakeLists.txt  DigitalRead.ino  platformio.ini
hardware/lib/ArduinoFake/: CMakeLists.txt  Makefile  README.md
hardware/lib/ArduinoFake/src/: CMakeLists.txt
hardware/nirs/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_Virtual.txt  platformio.ini  platformio.ini.balk
hardware/nirs/docs/: firmware.drawio  movement.md
hardware/nirs/docs/7_sem/: matlab.md
hardware/nirs/docs/7_sem/latex/: __latexindent_temp.tex  biblio.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc  mystyle.sty
hardware/nirs/docs/7_sem/latex/include/: titul.docx  ~$titul.docx
hardware/nirs/fstreams/sin_input/: f1_input.txt  f1_output.txt
hardware/nirs/include/Vector.bak/: CMakeLists.txt  Vector.h
hardware/nirs/lib/ArduinoFake/examples/wiring-blink/test/: test_main.cpp
hardware/nirs/lib/Math3D/: Math3D.h  Vector.cpp
hardware/nirs/lib/Vector/: CMakeLists.txt
hardware/nirs/lib/Vector/src/: Vector.h
hardware/nirs/matlab/: graph_tachometr_write.m  grapth_tachometr_file.asv  grapth_tachometr_file.m  tachometr.m
hardware/nirs/matlab/diff_wheels/: diff_wheels.asv  diff_wheels.m
hardware/nirs/matlab/grapth_tachometr/: graph_tachometr_write.m  grapth_tachometr_file.m
hardware/nirs/matlab/grapth_tachometr/Analysis/: getData.m  tachometr.m
hardware/nirs/mock/: Arduino.h
hardware/nirs/mock/ArduinoFake/: CONTRIBUTING.md
hardware/nirs/mock/ArduinoFake/src/: CMakeLists.txt
hardware/nirs/mock/RF24/: RF24.cpp  RF24.h
hardware/nirs/mock/leOS2Mock/: CMakeLists.txt  leOS2Mock.cpp  leOS2Mock.h
hardware/nirs/scripts/: platformio.sh
hardware/nirs/src/: CMakeLists.txt  main.cpp
hardware/nirs/src/car/: CMakeLists.txt  config.cpp  config.h
hardware/nirs/src/car/Chassis/: Chassis.cpp  Chassis.h  pins.h
hardware/nirs/src/car/Config/: Config.cpp  Config.h
hardware/nirs/src/car/Controller/: Controller.cpp  Controller.h
hardware/nirs/src/car/Eeprom/: Eeprom.hpp
hardware/nirs/src/car/IMU/: IMU.cpp  IMU.h
hardware/nirs/src/car/Model/: Model.cpp  Model.cpp.bak  Model.h  Model.h.bak
hardware/nirs/src/car/Regulator/: PID.hpp  Regulator.h
hardware/nirs/src/car/Tachometr/: Tachometr.cpp  Tachometr.h
hardware/nirs/src/cmd/: car.cpp  car_scheduller.cpp  mpu_6050.cpp  retranslator.cpp
hardware/nirs/src/core/: scheduller.h
hardware/nirs/src/core/arduino/: Pin.cpp
hardware/nirs/src/modules/: CMakeLists.txt  PrintMy.cpp  PrintMy.h
hardware/nirs/src/modules/ByteArray/: ByteArray.cpp  ByteArray.h
hardware/nirs/src/modules/CIrcularBuffer/: CircularBuffer.cpp  CircularBuffer.h
hardware/nirs/src/modules/CircularBuffer/: CircularBuffer.h
hardware/nirs/src/modules/Communicator/: Communicator.cpp  Communicator.h  Listener.h  Message.cpp  Message.h  SerialCommunicator.cpp  SerialCommunicator.h  SerialMock.h
hardware/nirs/src/modules/Logger/: Logger.cpp  Logger.h  Logger.hpp
hardware/nirs/src/modules/Logger/Serial/: Serial.cpp  Serial.h
hardware/nirs/src/modules/Math/: Der.hpp  Filter3.hpp  Math.h  Other.hpp
hardware/nirs/src/modules/RadioExtended/: RadioExtended.cpp  RadioExtended.h
hardware/nirs/src/modules/RadioMessage/: RadioMessage.h
hardware/nirs/src/retranslator/: CMakeLists.txt
hardware/nirs/src/retranslator/Controller/: Controller.cpp  Controller.h
hardware/nirs/test/: lib.h
hardware/nirs/test/car/: test_1.cpp  test_chasssis.cpp  test_tachometr.cpp
hardware/old/base/: .gcc-flags.json
hardware/old/base/.pioenvs/: .sconsign.dblite  structure.hash
hardware/old/base/.pioenvs/uno/: firmware.elf  firmware.hex
hardware/old/base/src/modules/Manager/: Manager.cpp
hardware/old/base/src/modules/Map/: Map.cpp  Map.h
hardware/old/modules/ByteArray/: ByteArray.cpp
hardware/old/modules/RadioExtended/: RadioExtended.h
hardware/old/modules/RadioMessage/: RadioMessage.cpp
hardware/old/slave/src/modules/Manager/: Manager.cpp
hardware/src/core/: Scheduller.cpp  Scheduller.h
hardware/src/core/arduino/: Pin.h  Utils.cpp  Utils.h
hardware/src/core/controller_interface/: IPin.h  IUtils.h
hardware/src/main/: prod.cpp  test.cpp
hardware/test/: build.sh  test_main.cpp
(+31 files in other folders)
